--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 
     a {
-      color: #f00;
+      color: rgba(100, 0, 255, 0.5);
     }
 
     h2 {
@@ -28,71 +28,29 @@
     /* Hero styles */
     .full-hero {
       background-color: #c7dbfc;
-      height: 20vw;
+      height: 50vw;
+      width: 50vw;
     }
 
     /* Social styles */
-    .social-list {
-      list-style: none;
-      padding: 0;
-      text-align: center;
-    }
-
-    .social-list>li {
-      display: inline-block;
-    }
-
     .social-link {
       color: #00f;
       background: rgba(150, 150, 150, 0.5);
-      display: inline-block;
-      height: 48px;
     }
 
     /* Bio styles */
     .bio-wrapper {
       font-size: 24px;
-      margin: auto;
-      max-width: 960px;
-      overflow: hidden;
-    }
-
-    .bio-wrapper:after {
-      clear: both;
-      content: " ";
-      display: block;
-      font-size: 0;
-      height: 0;
-      visibility: hidden;
     }
 
     .bio-box {
       border: 1px solid #000;
-      box-sizing: border-box;
+      width: 50%;
       font-size: 1rem;
-      float: left;
-      margin: 40px 1% 0;
-      padding: 2%;
-      width: 23%;
     }
 
     .bio-box h3 {
-      color: #fff;
-      font-size: 1em;
-      margin: -40px 0 1em;
-      text-align: center;
-    }
-
-    .bio-box img {
-      width: 100%;
-    }
-
-    .bio-box>a {
-      color: #c68bf9;
-    }
-
-    .bio-box>.social-link {
-      margin: auto;
+      font-size: 1.5em;
     }
 
     .bio-copy {
@@ -103,6 +61,8 @@
       color: green;
     }
 
+
+
     div.-bio-box {
       border: 1px solid #080;
     }
@@ -112,23 +72,21 @@
 <body>
   <div class="full-hero hero-home">
     <h1>I'm an h1</h1>
-    <ul class="social-list">
+    <ul>
       <li>
-        <a href="https://example.com/" class="social-link">Link1</a>
+        <a href="https://example.com/" class="social-link">Link</a>
       </li>
       <li>
-        <a href="https://example.com/" class="social-link">Link2</a>
+        <a href="https://example.com/" class="social-link">Link</a>
       </li>
       <li>
-        <a href="https://example.com/" class="social-link">Link3</a>
+        <a href="https://example.com/" class="social-link">Link</a>
       </li>
     </ul>
   </div>
-
   <h2>I'm an h2</h2>
   <div class="bio-wrapper">
     <div class="bio-box">
-      <img src="https://placekitten.com/g/400/400">
       <h3>Michael Hartl</h3>
       <a href="https://twitter.com/mhartl" class="social-link">here</a>
       <div class="bio-copy">
@@ -140,7 +98,6 @@
       </div>
     </div>
     <div class="bio-box">
-      <img src="https://placekitten.com/g/400/400">
       <h3>Lee Donahoe</h3>
       <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
       <div class="bio-copy">
@@ -150,7 +107,6 @@
       </div>
     </div>
     <div class="bio-box">
-      <img src="https://placekitten.com/g/400/400">
       <h3>Nick Merwin</h3>
       <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
       <div class="bio-copy">
@@ -160,32 +116,12 @@
       </div>
     </div>
     <div class="bio-box">
-      <img src="https://placekitten.com/g/400/400">
       <h3>???</h3>
       <div class="bio-copy">
         <p>The Future</p>
       </div>
     </div>
   </div>
-  <p>
-    Learn Enough to Be Dangerous is a leader in the movement to teach the world <em>technical sophistication</em>, which
-    includes both "hard skills" like coding, command lines, and version control, and "soft skills" like guessing
-    keyboard shortcuts, Googling error messages, and knowing when to just reboot the darn thing.
-  </p>
-  <p>
-    We believe there are <strong>at least a billion people</strong> who can benefit from learning technical
-    sophistication, probably more. To join our movement, <a href="https://learnenough.com/#email_list">sign up for our
-      official email list</a> now.
-  </p>
-  <h3>Background</h3>
-  <p>
-    Learn Enough to be Dangerous is an outgrowth of the <a href="https://www.railstutorial.org">Ruby on Rails
-      Tutorial</a> and the <a href="https://www.softcover.io/">Softcover publishing platform</a>. This page is part of
-    the sample site for <a href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and Layout to Be
-        Dangerous</em></a>, which teaches the basics of <strong>C</strong>ascading <strong>S</strong>tyle
-    <strong>S</strong>heets, the language that allows web pages to be styled. Other related tutorials can be found at <a
-      href="https://www.learnenough.com/">learnenough.com</a>.
-  </p>
 </body>
 
 </html>
